--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,54 @@ body {
   padding: 30px;
   border-radius: 20px;
 }
+
+.search-form-input {
+  background-color: rgb(237, 231, 231);
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 15px;
+  border: 1px solid;
+  width: 80%;
+}
+
+.search-form-button {
+  background-color: rgb(78, 5, 248);
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 15px;
+  border: none;
+}
+
+a {
+  color: rgb(78, 5, 248);
+}
+
+.weather-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+main {
+  padding-top: 30px 0;
+}
+
+.weather-city {
+  font-size: 40px;
+  line-height: 50px;
+  margin: 0;
+}
+
+.weather-details {
+  font-size: 15px;
+  line-height: 20px;
+}
+
+.weather-details strong {
+  color: rgb(199, 12, 75);
+}
+
+footer {
+  border-top: 1px solid rgb(253, 248, 248);
+  padding: 30px 0 0 0;
+  text-align: center;
+}
